force-app/main/default/objects/Return__c/Return__c.object-meta.xml
<CustomObject>
    <label>Return</label>
    <nameField>
        <displayFormat>RN-{000000000}</displayFormat>
        <label>Return  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>