force-app/main/default/objects/Return__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Return</relationshipLabel>
    <relationshipName>Return</relationshipName>
    <type>Lookup</type>
</CustomField>