force-app/main/default/objects/Return__c/fields/Dealer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Comments__c</fullName>
    <label>Dealer Comments</label>
    <type>TextArea</type>
</CustomField>