force-app/main/default/objects/Return__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Return</relationshipLabel>
    <relationshipName>Return</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>