force-app/main/default/objects/Return__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Return</relationshipLabel>
    <relationshipName>Return</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>