force-app/main/default/objects/Return__c/fields/Sale_Order__c.field-meta.xml
<CustomField>
    <fullName>Sale_Order__c</fullName>
    <label>Sale Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Return</relationshipLabel>
    <relationshipName>Returned_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>